# llm-lab

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml  utils.py
data/: WikiText.py
models/: GPT2.py
